package main

import (
	"io"
	"log"

	"golang.org/x/net/context"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"

	pb "github.com/KanybekMomukeyev/goDockerCompose/grpc/proto"
)

const (
	//address = "192.168.0.36:50051"
	address = "localhost:50051"
)

// createCustomer calls the RPC method CreateCustomer of CustomerServer
func createCustomer(client pb.RentautomationServiceClient, customer *pb.ExampleRequest) {

	resp, err := client.CreateExample(context.Background(), customer)
	if err != nil {
		log.Fatalf("Could not create Customer: %v", err)
	}
	if resp.Success {
		log.Printf("A new Customer has been added with id: %d", resp.Id)
	}
}

// getCustomers calls the RPC method GetCustomers of CustomerServer
func getCustomers(client pb.RentautomationServiceClient, filter *pb.ExampleFilter) {
	// calling the streaming API
	stream, err := client.GetExamples(context.Background(), filter)

	if err != nil {
		log.Fatalf("Error on get customers: %v", err)
	}

	for {
		// Receiving the stream of data
		customer, err := stream.Recv()
		if err == io.EOF {
			break
		}
		if err != nil {
			log.Fatalf("%v.GetCustomers(_) = _, %v", client, err)
		}
		log.Printf("Customer: %v", customer)
	}
}
func main() {

	creds, err := credentials.NewClientTLSFromFile("../certfiles/ca.crt", "localhost")
	if err != nil {
		println("Failed to create TLS credentials %v", err)
	}

	conn, err := grpc.Dial(address, grpc.WithTransportCredentials(creds))
	if err != nil {
		println("did not connect: %v", err)
	}

	defer conn.Close()
	// Creates a new CustomerClient
	client := pb.NewRentautomationServiceClient(conn)

	customer := &pb.ExampleRequest{
		Id:    101,
		Name:  "Kanybek Momukeev",
		Email: "shiju@xyz.com",
		Phone: "732-757-2923",
		Addresses: []*pb.ExampleRequest_Address{
			&pb.ExampleRequest_Address{
				Street:            "1 Mission Street",
				City:              "San Francisco",
				State:             "CA",
				Zip:               "94105",
				IsShippingAddress: false,
			},
			&pb.ExampleRequest_Address{
				Street:            "Greenfield",
				City:              "Kochi",
				State:             "KL",
				Zip:               "68356",
				IsShippingAddress: true,
			},
		},
	}

	// Create a new customer
	createCustomer(client, customer)

	customer = &pb.ExampleRequest{
		Id:    102,
		Name:  "Irene Rose",
		Email: "irene@xyz.com",
		Phone: "732-757-2924",
		Addresses: []*pb.ExampleRequest_Address{
			&pb.ExampleRequest_Address{
				Street:            "1 Mission Street",
				City:              "San Francisco",
				State:             "CA",
				Zip:               "94105",
				IsShippingAddress: true,
			},
		},
	}

	// Create a new customer
	createCustomer(client, customer)
	// Filter with an empty Keyword
	filter := &pb.ExampleFilter{Keyword: "Ir"}
	getCustomers(client, filter)
}